# RealmsPlayerlistBot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .replit  Dockerfile  README.md  config.json  config_example.toml  db_settings.py  docker-compose.yml  gen_dbs.py  keep_alive.py  license_header.txt  main.py  pyproject.toml  requirements.txt  rpl_config.py  schema.prisma  xbox_authenticate.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql-analysis.yml  mirror.yml  pytest.yml
.s2i/: environment
cogs/: autorun_playerlist.py  config_fetch.py  etc_events.py  eval_cmd.py  general_cmds.py  mod_cmds.py  on_cmd_error.py  owner_cmds.py  playerlist.py
cogs/utils/: clubs_handler.py  universals.py
common/: classes.py  clubs_playerlist.py  custom_providers.py  device_code.py  fuzzy.py  graph_template.py  help_cmd.py  help_paginator.py  help_tools.py  microsoft_core.py  models.py  paginator.py  partials.py  playerlist_events.py  playerlist_utils.py  premium_code.py  premium_utils.py  profile_custom.py  realm_stories.py  realms_api.py  splash_texts.py  stats_utils.py  utils.py  xbox_api.py
common/xbox_api/: __init__.py  club_models.py  core.py  peoplehub_models.py  profile_models.py
exts/: autorun_playerlist.py  autorunners.py  etc_events.py  general_cmds.py  guild_config.py  help_cmd.py  on_cmd_error.py  online.py  owner_cmds.py  pl_event_handling.py  playerlist.py  playerlist_old.pyb  premium.py  premium_config.py  premium_handling.py  statistics.py  voting.py
migrations/20230911152105_init/: migration.sql
migrations/20230922031937_notification_channels/: migration.sql
migrations/20231221205121_reoccurring_leaderboard/: migration.sql
migrations/20240606211502_nicknames/: migration.sql
migrations/models/: 0_20230201171721_init.py  1_20230328152719_update.py  1_20230608005522_None.py  2_20230614205627_update.py  3_20230628231344_update.py  4_20230906184623_update.py  5_20250506001949_None.py  6_20250506005003_create_dbs.py  7_20250506115832_adjust_columns.py  8_20250507205909_playerlist_chan_null.py
tests/: conftest.py
tests/common/: stats_utils_models.py  test_stats_utils.py
