[project]
name = "realms-playerlist-bot"
version = "0.1.0"
description = "A bot that helps out owners of Minecraft: Bedrock Edition Realms by showing various statistics related to player join/leaves."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.10.5",
    "discord-py-interactions[speedup]==5.13.1",
    "tansy==0.9.2",
    "humanize==4.10.0",
    "aiodns==3.2.0",
    "attrs==24.2.0",
    "pydantic==2.8.2",
    "httpcore",
    "httpx[http2]==0.27.0",
    "prisma==0.15.0",
    "redis[hiredis]==5.0.8",
    "orjson==3.10.7",
    "sentry-sdk==2.13.0",
    "rapidfuzz==3.9.6",
    "pycryptodome==3.20.0",
    "msgspec==0.18.6",
    "elytra-ms==0.7.2",
    "uvloop==0.20.0",
    "uvloop==0.20.0 ; platform_system == 'Linux'",
]

[tool.setuptools]
packages = []


[tool.ruff]
line-length = 88

select = [
    "E",
    "F",
    "UP",
    "N",
    "YTT",
    "ANN",
    "S",
    "B",
    "A",
    "C4",
    "T20",
    "RET",
    "SIM",
    "I",
    "ASYNC",
    "N",
    "UP",
    "DTZ",
    "G",
    "PIE",
    "TCH",
    "ARG",
    "RUF",
]
ignore = [
    "E501",
    "E402",
    "B003",
    "ANN101",
    "ANN102",
    "RET506",
    "ANN401",
    "B008",
    "N806",
    "A003",
    "N818",
    "UP007",
    "SIM118",
    "RET502",
    "RET503",
    "SIM114",
    "S603",
    "S607",
    "SIM117",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py312"

fix = true

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"]

[tool.uv.sources]
httpcore = { git = "https://github.com/MarkusSintonen/httpcore.git", rev = "e724565270603a72d11f6d3bfc09671ffcfe36f2" }
